# epengine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cookiecutter-fpgmaas.md  docker-compose.hatchet.yml  docker-compose.override.yml  docker-compose.replicas.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
artifacts/: component-lib-ma.db
copilot/: .workspace
copilot/environments/addons/: addons.parameters.yml  hatchet-broker.yml  hatchet-db.yml  mitsdl-epengine.yml
copilot/environments/prod/: manifest.yml
copilot/hatchet-api/: manifest.yml
copilot/hatchet-engine/: manifest.yml
copilot/hatchet-worker/: manifest.yml
copilot/hatchet-worker/addons/: mitsdl-epengine-access-policy.yml
copilot/worker/: manifest.yml
data/: create_specs.ipynb  specs.json
data/idfs/: Office_totalBaseline.idf  Residential_totalBaseline.idf
data/onebuilding/: pull_csv.ipynb
docs/: getting-started.md  index.md  modules.md
docs/getting-started/: copilot.md  hatchet-deploy.md  index.md  local.md
epengine/: __init__.py  hatchet.py
epengine/api/: Dockerfile  __init__.py  main.py
epengine/cli/: __init__.py  main.py
epengine/experiments/: __init__.py  tarkhan.py
epengine/experiments/tarkhan/: exfiltration.ipynb  models.py  workflows.py
epengine/gis/: __init__.py  geometry.py  models.py  submit.py
epengine/gis/data/: epw_metadata.parquet  epw_metadata.py
epengine/initialize/: Dockerfile  __init__.py  main.py
epengine/models/: __init__.py  base.py  branches.py  configs.py  ddy_injector.py  flat_shoebox.py  inference.py  leafs.py  leaves.py  manifests.py  mappedsim.py  mixins.py  outputs.py  sampling.py  shoebox.py  shoebox_sbem.py  train_sbem.py  transforms.py
epengine/models/data/: incentives.json  incentives_all_customers.json  incentives_format.json  incentives_income_eligible.json  retrofit-cost-schema.json  retrofit-costs.json
epengine/ui/: __init__.py  main.py
epengine/utils/: filesys.py  results.py
epengine/worker/: Dockerfile  Dockerfile.old  __init__.py  energyplus_versions.json  main.py
epengine/worker/coiled/: Dockerfile  coiled.ipynb
epengine/workflows/: __init__.py  archive.py  basic.py  fanout.py  mappedsim.py  online.py  sbem_inference.py  scatter_gather.py  shoebox.py  shoebox_flat.py  shoebox_sbem.py  simple.py  simulate.py  train_sbem.py
epengine/workflows/artifacts/: space.yml
epengine/workflows/artifacts/models/: model_Domestic_Hot_Water.lgb  model_Equipment.lgb  model_Lighting.lgb
epengine/workflows/experiments/: tarkhan.py
getting-started/: index.html
getting-started/copilot/: index.html
getting-started/hatchet-deploy/: index.html
getting-started/local/: index.html
infra/: sst.config.ts
modules/: index.html
notebooks/: cost_and_solar_checks.ipynb  first-principles.ipynb  inference_and_misc_scratchpad.ipynb  learning_curves.ipynb  learning_curves_with_peaks.ipynb  online_learning_demo.ipynb  test.ipynb  test_geom.ipynb
notebooks/diagrams/: hierarchical uncertainty.drawio  hierarchical_model copy.drawio  hierarchical_model.drawio  hierarchical_model_with_income_effect.drawio  mabi-conditional-sampling.drawio  online_structure.drawio  representations.drawio  sbem-arch-simple.drawio  sbem-arch-vert.drawio  sbem.drawio
scripts/: sbem_grid_sim.py
search/: search_index.json
structurizr/: docker-compose.yml  workspace.dsl  workspace.json
tests/: test_base_specs.py  test_branches_specs.py  test_example.py  test_foo.py  test_inference_costs.py  test_models.py  test_results.py  test_utils.py
