[project]
name = "epengine"
version = "1.0.0"
description = "This is a repository for managing queues of EnergyPlus simulations with Hatchet."
authors = [
    { name = "Sam Wolk", email = "mail@samwolk.info" }
]
requires-python =">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "epinterface==1.0.0",
    "hatchet-sdk>=1,<1.17",
    "pydantic>=2.9.2,<3.0",
    "boto3>=1.35,<2.0",
    "pandas>=2.2.2,<2.3",
    "numpy>=2.2,<2.3",
    "tqdm>=4.66,<5.0",
    "tables>=3.9,<4.0",
    "scipy>=1.14,<1.15",
    "archetypal>=2.18",
    "ladybug-core>=0.43,<1.0",
    "geopandas~=1.0.1",
    "fastparquet~=2024.11.0",
    "pyarrow~=19.0.1",
    "pythermalcomfort~=3.0.1",
    "s3fs>=2025.7.0",
]

[project.scripts]
epe = "epengine.cli.main:cli"
epengine = "epengine.cli.main:cli"
worker = "epengine.worker.main:run"


[project.optional-dependencies]
ml = [
    "xgboost>=3.0,<4.0",
    "scikit-learn>=1.6,<2.0",
    "lightgbm>=4.6,<5.0"
]
ui = [
    "streamlit>=1.44,<2.0"
]
coiled = [
    "coiled>=1.36,<2.0",
    "dask[complete]>=2024.7,<2025.0"
]

[dependency-groups]
dev = [
    "jupyter>=1.0,<2.0",
    "pytest>=7.2,<8.0",
    "pytest-cov>=4.0,<5.0",
    "pre-commit>=3.4,<4.0",
    "tox>=4.11,<5.0",
    "pyright~=1.1.392",
    "boto3-stubs[essential]>=1.35,<2.0",
    "pyinstrument~=5.0.1",
    "supabase>=2.15,<3.0",
    "pvlib>=0.13.0",
    "plotly>=6.3.0",
]
docs = [
    "mkdocs>=1.4,<2.0",
    "mkdocs-material>=9.2,<10.0",
    "mkdocstrings[python]>=0.26,<1.0",
    "mkdocstrings-python>=1.11,<2.0",
]
api = [
    "fastapi>=0.111,<1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.30,<1.0",
]


# [tool.uv.sources]
# epinterface = {git = "https://github.com/szvsw/epinterface", branch = "main"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["epengine", "tests/test_utils.py"]
typeCheckingMode = "standard"
ignore = ["**/data/**", "tests/"]
venvPath = "."
venv = ".venv"


[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    "D"
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"*.ipynb" = ["E402", "D103", "S101", "B018", "D102", "D101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["epengine"]

[project.urls]
Homepage = "https://github.com/szvsw/epengine"
Documentation = "https://szvsw.github.io/epengine"
Repository = "https://github.com/szvsw/epengine"
Issues = "https://github.com/szvsw/epengine/issues"
